chore: sincroniza código bom e inclui public/lib + public/refs

--- a/.gitignore
+++ b/.gitignore
@@ -80,3 +80,9 @@ yarn-error.log*
 .idea/
 .DS_Store
 Thumbs.db
+
+# --- PERMITIR libs que precisam ser servidas por URL a partir de /public
+!public/lib/**
+!public/lib/audio/**
+!public/lib/audio/**/*.js
+!public/refs/**
