--- a/api/package.json
+++ b/api/package.json
@@ -5,6 +5,8 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.0"
-  }
+    "express": "^4.18.0",
+    "pg": "^8.11.0"
+  },
+  "type": "module"
 }
