--- a/work/package.json
+++ b/work/package.json
@@ -5,7 +5,7 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "pg": "^8.11.0",         
-    "aws-sdk": "^2.1488.0"  
-  }
+    "pg": "^8.11.0"
+  },
+  "type": "module"
 }
