--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "postinstall": "npm run copy:refs"
   },
   "dependencies": {
+    "aws-sdk": "^2.1692.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
@@ -25,6 +26,7 @@
     "firebase-functions": "^4.4.1",
     "formidable": "^3.5.4",
     "mercadopago": "^2.8.0",
+    "multer": "^2.0.2",
     "node-fetch": "^2.6.7"
   },
   "main": "server.js",
