--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,9 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "aws-sdk": "^2.1692.0",
     "express": "^4.18.0",
+    "multer": "^2.0.2",
     "pg": "^8.11.0"
   },
   "type": "module"
