--- a/api/package.json
+++ b/api/package.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "aws-sdk": "^2.1692.0",
+    "cors": "^2.8.5",
     "express": "^4.18.0",
     "multer": "^2.0.2",
     "pg": "^8.11.0"
