--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "postinstall": "npm run copy:refs"
   },
   "dependencies": {
+    "audio-decode": "^2.2.3",
     "aws-sdk": "^2.1692.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
