--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "express": "^4.18.2",
     "firebase-admin": "^12.0.0",
     "firebase-functions": "^4.4.1",
+    "fluent-ffmpeg": "^2.1.3",
     "formidable": "^3.5.4",
     "mercadopago": "^2.8.0",
     "multer": "^2.0.2",
+    "music-metadata": "^11.8.3",
     "node-fetch": "^2.7.0",
     "pg": "^8.16.3"
   },
