--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "formidable": "^3.5.4",
     "mercadopago": "^2.8.0",
     "multer": "^2.0.2",
+    "music-metadata": "^11.8.3",
     "node-fetch": "^2.7.0",
     "pg": "^8.16.3"
   },
