--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "chatbot-correa",
   "version": "1.0.0",
@@ -49,5 +50,6 @@
     "url": "https://github.com/djcorrea/prod.ai-novo/issues"
   },
   "homepage": "https://github.com/djcorrea/prod.ai-novo#readme",
-  "description": ""
+  "descriptionn": ""
+
 }
