--- a/work/package.json
+++ b/work/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "aws-sdk": "^2.1692.0",
     "dotenv": "^17.2.2",
+    "music-metadata": "^11.8.3",
     "pg": "^8.11.0"
   },
   "type": "module"
