--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "chatbot-correa",
   "version": "1.0.0",
@@ -24,6 +23,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^4.18.2",
+    "ffmpeg-static": "^5.2.0",
+    "ffprobe-static": "^3.1.0",
     "firebase-admin": "^12.0.0",
     "firebase-functions": "^4.4.1",
     "fluent-ffmpeg": "^2.1.3",
@@ -51,5 +52,4 @@
   },
   "homepage": "https://github.com/djcorrea/prod.ai-novo#readme",
   "descriptionn": ""
-
 }
