WORKER FIXADO: Pipeline carrega no work/index.js com ESM paths
- work/index.js: ESM-compatible paths com new URL()
- Testado localmente: pipeline carrega com sucesso
- railway.toml: startCommand atualizado para work directory
- Resolve: Worker operará apenas em modo fallback

--- a/work/package.json
+++ b/work/package.json
@@ -2,7 +2,7 @@
   "name": "worker",
   "version": "1.0.0",
   "scripts": {
-    "start": "node index.js"
+    "start": "cd .. && node worker-root.js"
   },
   "dependencies": {
     "aws-sdk": "^2.1692.0",
