--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "vercel dev",
     "dev:upload": "node dev-server.js",
     "start": "node server.js",
+    "worker": "node worker-root.js",
     "build:refs": "node tools/reference-builder.js",
     "validate:refs": "node tools/reference-validator.js",
     "calibrate:refs": "node tools/ref-calibrator.js",
