FIX: Worker Railway definitivo - Pipeline carrega OK
 TESTADO: Pipeline carrega com sucesso localmente
- work/package.json: start script corrigido para 'node index.js'
- railway.toml: startCommand usando 'npm start'
- public/cache-bust.js: UTF-8 limpo
- Resolve: Cannot find module '/worker-root.js'
- Worker funcional:  Pipeline Completo (Fases 5.1-5.4) carregado

--- a/railway.toml
+++ b/railway.toml
@@ -2,7 +2,7 @@
 builder = "NIXPACKS"
 
 [deploy]
-startCommand = "cd work && npm install && node index.js"
+startCommand = "cd work && npm install && npm start"
 healthcheckPath = "/"
 healthcheckTimeout = 300
 restartPolicyType = "ON_FAILURE"
