--- a/work/package.json
+++ b/work/package.json
@@ -2,7 +2,7 @@
   "name": "worker",
   "version": "1.0.0",
   "scripts": {
-    "start": "cd .. && node worker-root.js"
+    "start": "node index.js"
   },
   "dependencies": {
     "aws-sdk": "^2.1692.0",
