FIX FINAL: Worker-root.js carrega pipeline corretamente
 TESTADO E FUNCIONANDO:
- worker-root.js:  Pipeline carregado com sucesso do caminho direto
- railway.toml: usa worker-root.js com 'npm install --prefix work'
- work/index.js: paths otimizados para /app/work/
- Resolve: CRÍTICO - Worker operará apenas em modo fallback

 Pipeline completo funcionando: Fases 5.1-5.4 carregadas

--- a/railway.toml
+++ b/railway.toml
@@ -2,7 +2,7 @@
 builder = "NIXPACKS"
 
 [deploy]
-startCommand = "cd work && npm install && npm start"
+startCommand = "npm install --prefix work && node worker-root.js"
 healthcheckPath = "/"
 healthcheckTimeout = 300
 restartPolicyType = "ON_FAILURE"
