PIPELINE FUNCIONANDO! index.js na raiz carrega pipeline
 TESTADO E FUNCIONANDO:
- index.js:  Pipeline carregado com sucesso!
- railway.toml: startCommand simplificado 'npm install && node index.js'
- Caminho correto: ./api/audio/pipeline-complete.js
- Pipeline Completo (Fases 5.1-5.4) carregado

 FIM DO FALLBACK - PIPELINE ATIVO!

--- a/railway.toml
+++ b/railway.toml
@@ -2,7 +2,7 @@
 builder = "NIXPACKS"
 
 [deploy]
-startCommand = "npm install --prefix work && node worker-root.js"
+startCommand = "npm install && node index.js"
 healthcheckPath = "/"
 healthcheckTimeout = 300
 restartPolicyType = "ON_FAILURE"
