--- a/railway.toml
+++ b/railway.toml
@@ -3,10 +3,10 @@ builder = "NIXPACKS"
 
 [deploy]
 startCommand = "npm install && node index.js"
-healthcheckPath = "/"
-healthcheckTimeout = 300
+healthcheckPath = ""
+healthcheckTimeout = 60
 restartPolicyType = "ON_FAILURE"
-restartPolicyMaxRetries = 10
+restartPolicyMaxRetries = 3
 
 [env]
 NODE_ENV = "production"
