--- a/work/package.json
+++ b/work/package.json
@@ -9,7 +9,9 @@
     "dotenv": "^17.2.2",
     "fluent-ffmpeg": "^2.1.3",
     "music-metadata": "^11.8.3",
-    "pg": "^8.11.0"
+    "pg": "^8.11.0",
+    "ffmpeg-static": "^5.2.0",
+    "ffprobe-static": "^3.1.0"
   },
   "type": "module"
 }
