--- a/work/package.json
+++ b/work/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "aws-sdk": "^2.1692.0",
     "dotenv": "^17.2.2",
+    "ffmpeg-static": "^5.2.0",
     "fluent-ffmpeg": "^2.1.3",
     "music-metadata": "^11.8.3",
     "pg": "^8.11.0"
