--- a/work/package.json
+++ b/work/package.json
@@ -8,6 +8,7 @@
     "aws-sdk": "^2.1692.0",
     "dotenv": "^17.2.2",
     "ffmpeg-static": "^5.2.0",
+    "ffprobe-static": "^3.1.0",
     "fluent-ffmpeg": "^2.1.3",
     "music-metadata": "^11.8.3",
     "pg": "^8.11.0"
