--- a/work/package.json
+++ b/work/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "aws-sdk": "^2.1692.0",
     "dotenv": "^17.2.2",
+    "express": "^4.19.2",
     "ffmpeg-static": "^5.2.0",
     "ffprobe-static": "^3.1.0",
     "fluent-ffmpeg": "^2.1.3",
