--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "vercel dev",
     "dev:upload": "node dev-server.js",
-    "start": "node server.js",
+    "start": "node index.js",
     "worker": "node worker-root.js",
     "build:refs": "node tools/reference-builder.js",
     "validate:refs": "node tools/reference-validator.js",
