--- a/api/package.json
+++ b/api/package.json
@@ -9,6 +9,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.0",
     "multer": "^2.0.2",
+    "node-fetch": "^3.3.0",
     "pg": "^8.11.0"
   },
   "type": "module"
