--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "mercadopago": "^2.8.0",
     "multer": "^2.0.2",
     "music-metadata": "^11.8.3",
+    "music-tempo": "^1.0.3",
     "node-fetch": "^2.7.0",
     "pg": "^8.16.3"
   },
