--- a/.env.example
+++ b/.env.example
@@ -1,110 +1,12 @@
-# ============================================================================
-# 🎛️ SOUNDY AI - VARIÁVEIS DE AMBIENTE
-# ============================================================================
-
-# ----------------------------------------------------------------------------
-# 📤 UPLOAD
-# ----------------------------------------------------------------------------
-
+# Configuração de Upload de Áudio
 # Tamanho máximo para upload de arquivos de áudio (em MB)
 # Padrão: 60MB se não especificado
 MAX_UPLOAD_MB=60
 
-# ----------------------------------------------------------------------------
-# 🚀 FEATURE FLAGS
-# ----------------------------------------------------------------------------
-
-# Engine de análise espectral
-# - legacy: Usa análise de 7 bandas largas (comportamento padrão)
-# - granular_v1: Ativa análise de sub-bandas granulares (20 Hz step) com:
-#   * Tolerâncias baseadas em sigma (σ)
-#   * Status por sub-banda (ideal/adjust/fix)
-#   * Sugestões inteligentes de boost/cut
-#   * Agregação em 7 bandas principais (compatível com frontend)
-#   * Campos aditivos no payload (granular[], suggestions[], engineVersion)
+# 🌈 Configuração do Engine de Análise Espectral
+# Controla qual algoritmo de análise de bandas usar
+# Opções: 'legacy' (padrão - 7 bandas largas) | 'granular_v1' (sub-bandas de 20 Hz)
 ANALYZER_ENGINE=legacy
 
-# Desabilitar sistema de sugestões (problemas/suggestions-v2)
-# - true: Desabilita análise de problemas e sugestões (reduz processamento)
-# - false: Ativa sistema de sugestões (padrão)
-DISABLE_SUGGESTIONS=false
-
-# ----------------------------------------------------------------------------
-# 🔧 CONFIGURAÇÕES DE PIPELINE
-# ----------------------------------------------------------------------------
-
-# Tempo máximo de processamento (ms)
-PIPELINE_TIMEOUT_MS=180000
-
-# Taxa de amostragem padrão (Hz)
-SAMPLE_RATE=48000
-
-# FFT Configuration
-FFT_SIZE=4096
-FFT_HOP_SIZE=1024
-WINDOW_TYPE=hann
-
-# ----------------------------------------------------------------------------
-# 🗄️ DATABASE
-# ----------------------------------------------------------------------------
-
-DATABASE_URL=postgresql://user:password@localhost:5432/soundyai
-
-# ----------------------------------------------------------------------------
-# 📦 STORAGE (BACKBLAZE B2 / S3)
-# ----------------------------------------------------------------------------
-
-B2_KEY_ID=your_b2_key_id
-B2_APPLICATION_KEY=your_b2_application_key
-B2_BUCKET_NAME=soundyai-audio
-B2_ENDPOINT=https://s3.us-west-002.backblazeb2.com
-
-# ----------------------------------------------------------------------------
-# 🔐 SEGURANÇA
-# ----------------------------------------------------------------------------
-
-JWT_SECRET=your_jwt_secret_key_here
-API_KEY=your_api_key_here
-
-# ----------------------------------------------------------------------------
-# 🌍 AMBIENTE
-# ----------------------------------------------------------------------------
-
-NODE_ENV=development
-PORT=3000
-
-# ----------------------------------------------------------------------------
-# 📊 LOGS & DEBUGGING
-# ----------------------------------------------------------------------------
-
-# Nível de log (debug, info, warn, error)
-LOG_LEVEL=info
-
-# Habilitar logs detalhados de áudio
-AUDIO_DEBUG_LOGS=false
-
-# ----------------------------------------------------------------------------
-# 🧪 TESTES & DESENVOLVIMENTO
-# ----------------------------------------------------------------------------
-
-# Usar dados fictícios para testes (não recomendado em produção)
-USE_MOCK_DATA=false
-
-# Gerar telemetria detalhada (útil para debugging)
-ENABLE_TELEMETRY=true
-
-# ============================================================================
-# 📝 NOTAS DE USO
-# ============================================================================
-#
-# 1. Copie este arquivo para `.env` e ajuste os valores conforme necessário
-# 2. NUNCA commite o arquivo `.env` (já está no .gitignore)
-# 3. Para ativar granular_v1:
-#    - Defina ANALYZER_ENGINE=granular_v1
-#    - Reinicie workers/servidor
-#    - Verifique logs para confirmar engine ativado
-# 4. Para rollback: mude para ANALYZER_ENGINE=legacy
-# 5. Certifique-se de que as credenciais B2/S3 estão corretas
-#
-# ============================================================================
-
+# Outras configurações do projeto...
+# (adicione suas outras variáveis de ambiente aqui)
