--- a/.env.example
+++ b/.env.example
@@ -3,9 +3,10 @@
 # Padrão: 60MB se não especificado
 MAX_UPLOAD_MB=60
 
-# 🌈 Configuração do Engine de Análise Espectral
-# Controla qual algoritmo de análise de bandas usar
-# Opções: 'legacy' (padrão - 7 bandas largas) | 'granular_v1' (sub-bandas de 20 Hz)
+# 🌈 Engine de Análise Espectral
+# Controla qual algoritmo usar para análise de bandas de frequência
+# Valores: 'legacy' (7 bandas largas) | 'granular_v1' (sub-bandas de 20 Hz com análise σ)
+# Padrão: legacy
 ANALYZER_ENGINE=legacy
 
 # Outras configurações do projeto...
