--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express": "^4.18.2",
     "ffmpeg-static": "^5.2.0",
     "ffprobe-static": "^3.1.0",
+    "fft-js": "^0.0.12",
     "firebase-admin": "^12.0.0",
     "firebase-functions": "^4.4.1",
     "fluent-ffmpeg": "^2.1.3",
