--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "audio-decode": "^2.2.3",
     "aws-sdk": "^2.1692.0",
+    "bullmq": "^5.12.0",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^4.18.2",
@@ -36,12 +37,14 @@
     "firebase-functions": "^4.4.1",
     "fluent-ffmpeg": "^2.1.3",
     "formidable": "^3.5.4",
+    "ioredis": "^5.3.2",
     "mercadopago": "^2.8.0",
     "multer": "^2.0.2",
     "music-metadata": "^11.8.3",
     "music-tempo": "^1.0.3",
     "node-fetch": "^2.7.0",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "pm2": "^5.3.0"
   },
   "main": "server.js",
   "keywords": [],
