--- a/work/package.json
+++ b/work/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "aws-sdk": "^2.1692.0",
+    "bullmq": "^5.61.2",
     "dotenv": "^17.2.2",
     "express": "^4.19.2",
     "ffmpeg-static": "^5.2.0",
     "ffprobe-static": "^3.1.0",
     "fluent-ffmpeg": "^2.1.3",
+    "ioredis": "^5.8.2",
     "music-metadata": "^11.8.3",
     "pg": "^8.11.0"
   },
