--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "audio-decode": "^2.2.3",
     "aws-sdk": "^2.1692.0",
+    "bullmq": "^5.61.2",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^4.18.2",
@@ -38,6 +39,7 @@
     "firebase-functions": "^4.4.1",
     "fluent-ffmpeg": "^2.1.3",
     "formidable": "^3.5.4",
+    "ioredis": "^5.8.2",
     "mercadopago": "^2.8.0",
     "multer": "^2.0.2",
     "music-metadata": "^11.8.3",
