--- a/railway.toml
+++ b/railway.toml
@@ -2,8 +2,8 @@
 builder = "NIXPACKS"
 
 [deploy]
-startCommand = "node server.js"
-healthcheckPath = ""
+startCommand = "node work/start-combo.js"
+healthcheckPath = "/health"
 healthcheckTimeout = 60
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 3
