--- a/railway.toml
+++ b/railway.toml
@@ -1,10 +1,9 @@
 [build]
 builder = "NIXPACKS"
-# Define que o Railway deve buildar usando o diretório work
 root = "work"
+buildCommand = "cd work && npm install"
 
 [deploy]
-# Roda o servidor lá dentro da pasta work
 startCommand = "node work/server.js"
 healthcheckPath = ""
 healthcheckTimeout = 60
