--- a/work/api/package.json
+++ b/work/api/package.json
@@ -1,6 +1,9 @@
 {
   "name": "api",
   "version": "1.0.0",
+  "engines": {
+    "node": "20.x"
+  },
   "scripts": {
     "start": "node server.js"
   },
