--- a/work/package.json
+++ b/work/package.json
@@ -1,6 +1,9 @@
 {
   "name": "worker",
   "version": "1.0.0",
+  "engines": {
+    "node": "20.x"
+  },
   "scripts": {
     "start": "node server.js",
     "worker": "node worker-redis.js",
