--- a/work/api/package.json
+++ b/work/api/package.json
@@ -11,6 +11,7 @@
     "aws-sdk": "^2.1692.0",
     "cors": "^2.8.5",
     "express": "^4.18.0",
+    "express-rate-limit": "^7.1.5",
     "multer": "^2.0.2",
     "pg": "^8.11.0"
   },
