--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "music-metadata": "^11.8.3",
     "music-tempo": "^1.0.3",
     "node-fetch": "^2.7.0",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "stripe": "^14.0.0"
   },
   "main": "work/server.js",
   "keywords": [],
