--- a/.env.example
+++ b/.env.example
@@ -3,31 +3,32 @@
 # Padrão: 60MB se não especificado
 MAX_UPLOAD_MB=60
 
-<<<<<<< HEAD
 # ========================================
 # STRIPE CONFIGURATION
 # ========================================
 
 # Secret Key (backend only) - NUNCA expor no frontend
 # Obter em: Dashboard → Developers → API Keys
-
+STRIPE_SECRET_KEY=sk_test_51xxxxxxxxxxxxxxxxxx
 
 # Webhook Secret (para validar assinatura HMAC)
 # Obter em: Dashboard → Developers → Webhooks → Signing secret
 # Endpoint: https://seu-dominio.com/api/webhook/stripe
-# Eventos: checkout.session.completed
-STRIPE_WEBHOOK_SECRET=whsec_5xxxxxxxxxxxx
+# Eventos necessários:
+#   - checkout.session.completed
+#   - invoice.payment_succeeded
+#   - customer.subscription.deleted
+STRIPE_WEBHOOK_SECRET=whsec_xxxxxxxxxxxxxxxxxxxxxxxxxx
 
 # Price IDs (criados no Stripe Dashboard)
 # Dashboard → Products → Create Product → Copiar Price ID
-STRIPE_PRICE_ID_PLUS=price_1xxxxx_plus
-STRIPE_PRICE_ID_PRO=price_1xxxxx_pro
+# IMPORTANTE: Usar Price ID de SUBSCRIPTION (não one-time payment)
+STRIPE_PRICE_ID_PLUS=price_1xxxxxxxxxxxxxxxxxx
+STRIPE_PRICE_ID_PRO=price_1xxxxxxxxxxxxxxxxxx
 
 # URLs de redirect após pagamento
 STRIPE_SUCCESS_URL=https://seu-dominio.com/success?session_id={CHECKOUT_SESSION_ID}
 STRIPE_CANCEL_URL=https://seu-dominio.com/cancel
 
-=======
->>>>>>> parent of a459aa8 (stripe)
 # Outras configurações do projeto...
 # (adicione suas outras variáveis de ambiente aqui)
