--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,7 +1,11 @@
-[phases.build]
+[phases.setup]
+nixPkgs = ["nodejs-20_x"]
 
-[phases.start]
-cmd = "node work/worker-redis.js"
+[phases.build]
+cmds = ["npm install"]
+
+[start]
+cmd = "node work/server.js"
 
 [variables]
 NODE_ENV = "production"
