--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,11 +1,7 @@
-[phases.setup]
-nixPkgs = ["nodejs-20_x"]
-
 [phases.build]
-cmds = ["npm install"]
 
-[start]
-cmd = "node work/server.js"
+[phases.start]
+cmd = "node work/worker-redis.js"
 
 [variables]
 NODE_ENV = "production"
