--- a/railway.toml
+++ b/railway.toml
@@ -2,7 +2,7 @@
 builder = "NIXPACKS"
 
 [deploy]
-startCommand = "node work/server.js"
+startCommand = "node server.js"
 healthcheckPath = ""
 healthcheckTimeout = 60
 restartPolicyType = "ON_FAILURE"
