fix(build): Corrigir encoding UTF-16 LE para UTF-8 no Railway
- Convertido public/reference-flow.js de UTF-16 LE para ASCII puro
- Removido arquivo corrompido style-backup.css com null bytes
- Adicionado .gitattributes para forcar text eol=lf em todo repositorio
- Criado scripts/check-utf8.js (validacao pre-build)
- Prebuild hook falha build se encoding invalido detectado
- Resolve: stream did not contain valid UTF-8 no Nixpacks/Railway

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "worker": "node work/worker-redis.js",
     "start:web": "node work/server.js",
     "start:worker": "node work/worker-redis.js",
+    "prebuild": "node scripts/check-utf8.js",
     "build:refs": "node tools/reference-builder.js",
     "validate:refs": "node tools/reference-validator.js",
     "calibrate:refs": "node tools/ref-calibrator.js",
