--- a/api/package.json
+++ b/api/package.json
@@ -11,8 +11,10 @@
     "aws-sdk": "^2.1692.0",
     "cors": "^2.8.5",
     "express": "^4.18.0",
+    "firebase-admin": "^12.0.0",
     "multer": "^2.0.2",
     "node-fetch": "^3.3.0",
+    "openai": "^4.0.0",
     "pg": "^8.11.0"
   },
   "type": "module"
