fix: nixpacks.toml apontando para server.js correto (nao worker)

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,7 +1,7 @@
 [phases.build]
 
 [phases.start]
-cmd = "node work/worker-redis.js"
+cmd = "node work/server.js"
 
 [variables]
 NODE_ENV = "production"
