--- a/.env.example
+++ b/.env.example
@@ -16,19 +16,23 @@ STRIPE_SECRET_KEY=sk_test_51xxxxxxxxxxxxxxxxxx
 # Endpoint: https://seu-dominio.com/api/webhook/stripe
 # Eventos necessários:
 #   - checkout.session.completed
-#   - invoice.payment_succeeded
+#   - customer.subscription.created
+#   - customer.subscription.updated
 #   - customer.subscription.deleted
+#   - invoice.payment_succeeded
+#   - invoice.payment_failed
 STRIPE_WEBHOOK_SECRET=whsec_xxxxxxxxxxxxxxxxxxxxxxxxxx
 
-# Price IDs (criados no Stripe Dashboard)
+# Price IDs OFICIAIS (criados no Stripe Dashboard)
 # Dashboard → Products → Create Product → Copiar Price ID
 # IMPORTANTE: Usar Price ID de SUBSCRIPTION (não one-time payment)
-STRIPE_PRICE_ID_PLUS=price_1xxxxxxxxxxxxxxxxxx
-STRIPE_PRICE_ID_PRO=price_1xxxxxxxxxxxxxxxxxx
+# ⚠️ Já configurados como fallback no código, mas recomendado definir aqui
+STRIPE_PRICE_ID_PLUS=price_1SlHm6COXidjqeFinckOK8J9
+STRIPE_PRICE_ID_PRO=price_1SlIKMCOXidjqeFiTiPExXEb
 
 # URLs de redirect após pagamento
-STRIPE_SUCCESS_URL=https://seu-dominio.com/success?session_id={CHECKOUT_SESSION_ID}
-STRIPE_CANCEL_URL=https://seu-dominio.com/cancel
+STRIPE_SUCCESS_URL=https://seu-dominio.com/success.html?session_id={CHECKOUT_SESSION_ID}
+STRIPE_CANCEL_URL=https://seu-dominio.com/planos.html?canceled=true
 
 # Outras configurações do projeto...
 # (adicione suas outras variáveis de ambiente aqui)
