--- a/.env.example
+++ b/.env.example
@@ -34,5 +34,32 @@ STRIPE_PRICE_ID_PRO=price_1SlIKMCOXidjqeFiTiPExXEb
 STRIPE_SUCCESS_URL=https://seu-dominio.com/success.html?session_id={CHECKOUT_SESSION_ID}
 STRIPE_CANCEL_URL=https://seu-dominio.com/planos.html?canceled=true
 
+# ========================================
+# HOTMART CONFIGURATION (Combo Curso + PRO)
+# ========================================
+
+# Token de validação do webhook Hotmart
+# Obter em: Hotmart → Ferramentas → Webhooks → Criar webhook
+# Copie o "Hottok" gerado
+# Endpoint a cadastrar: https://seu-dominio.com/api/webhook/hotmart
+# Eventos necessários: PURCHASE_APPROVED
+HOTMART_WEBHOOK_SECRET=seu_hottok_aqui
+
+# ========================================
+# RESEND (Email Service)
+# ========================================
+
+# API Key do Resend para envio de e-mails
+# Obter em: https://resend.com/api-keys
+# Plano gratuito: 100 e-mails/dia, 3000/mês
+RESEND_API_KEY=re_xxxxxxxxxxxxxxxxxxxxxxxxxx
+
+# E-mail remetente (deve ser verificado no Resend)
+# Para domínio próprio, configure DNS no Resend
+FROM_EMAIL=SoundyAI <noreply@soundyai.com.br>
+
+# URL base do app (para links nos e-mails)
+APP_URL=https://soundyai.com.br
+
 # Outras configurações do projeto...
 # (adicione suas outras variáveis de ambiente aqui)
