--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "node-fetch": "^2.7.0",
     "openai": "^4.104.0",
     "pg": "^8.16.3",
+    "resend": "^6.6.0",
     "stripe": "^20.0.0"
   },
   "main": "work/server.js",
