--- a/.env.example
+++ b/.env.example
@@ -61,5 +61,27 @@ FROM_EMAIL=SoundyAI <noreply@soundyai.com.br>
 # URL base do app (para links nos e-mails)
 APP_URL=https://soundyai.com.br
 
+# ========================================
+# LAUNCH (Disparo de E-mails de Lançamento)
+# ========================================
+
+# Chave secreta para autorizar o disparo de e-mails de lançamento
+# IMPORTANTE: Use uma chave forte e mantenha em segredo
+# Esta chave protege contra disparos acidentais ou não autorizados
+LAUNCH_SECRET_KEY=soundyai-launch-2026-01-22-secret
+
+# URL da página de vendas (CTA do e-mail de lançamento)
+# O botão "Clique aqui para garantir seu acesso" redireciona para esta URL
+SALES_PAGE_URL=https://soundyai.com.br/lancamento
+
+# ========================================
+# FIREBASE (Backend)
+# ========================================
+
+# Service Account do Firebase para acesso ao Firestore
+# Obter em: Firebase Console > Configurações > Contas de serviço > Gerar nova chave privada
+# Cole o JSON inteiro em uma única linha
+FIREBASE_SERVICE_ACCOUNT='{"type":"service_account","project_id":"prodai-58436",...}'
+
 # Outras configurações do projeto...
 # (adicione suas outras variáveis de ambiente aqui)
