--- a/.env.example
+++ b/.env.example
@@ -74,6 +74,11 @@ LAUNCH_SECRET_KEY=soundyai-launch-2026-01-22-secret
 # O botão "Clique aqui para garantir seu acesso" redireciona para esta URL
 SALES_PAGE_URL=https://soundyai.com.br/lancamento
 
+# E-mail de teste para validação manual do template de lançamento
+# Usado APENAS pelo endpoint POST /api/launch/test-email
+# Não aceita email via body da requisição (segurança)
+TEST_EMAIL=seu-email-de-teste@exemplo.com
+
 # ========================================
 # FIREBASE (Backend)
 # ========================================
