--- a/package.json
+++ b/package.json
@@ -37,20 +37,22 @@
     "aws-sdk": "^2.1692.0",
     "bullmq": "^5.61.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.6.1",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "ffmpeg-static": "^5.2.0",
     "ffprobe-static": "^3.1.0",
+    "firebase": "^10.7.1",
     "firebase-admin": "^12.0.0",
     "firebase-functions": "^4.4.1",
     "fluent-ffmpeg": "^2.1.3",
+    "form-data": "^4.0.0",
     "formidable": "^3.5.4",
     "ioredis": "^5.8.2",
     "mercadopago": "^2.8.0",
     "multer": "^2.0.2",
     "music-metadata": "^11.8.3",
     "music-tempo": "^1.0.3",
-    "node-fetch": "^2.7.0",
+    "node-fetch": "^3.3.2",
     "openai": "^4.104.0",
     "pg": "^8.16.3",
     "resend": "^6.6.0",
