--- a/.env.example
+++ b/.env.example
@@ -72,7 +72,7 @@ LAUNCH_SECRET_KEY=soundyai-launch-2026-01-22-secret
 
 # URL da página de vendas (CTA do e-mail de lançamento)
 # O botão "Clique aqui para garantir seu acesso" redireciona para esta URL
-SALES_PAGE_URL=https://soundyai.com.br/lancamento
+SALES_PAGE_URL=https://musicaprofissional.com.br
 
 # E-mail de teste para validação manual do template de lançamento
 # Usado APENAS pelo endpoint POST /api/launch/test-email
