--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "worker": "node work/worker-redis.js",
     "start:web": "node work/server.js",
     "start:worker": "node work/worker-redis.js",
-    "prebuild": "node scripts/check-utf8.js",
+    "prebuild": "node scripts/check-utf8.js && node scripts/validate-tracking-deploy.cjs",
+    "predeploy": "node scripts/validate-tracking-deploy.cjs",
     "build:refs": "node tools/reference-builder.js",
     "validate:refs": "node tools/reference-validator.js",
     "validate:targets": "node scripts/validate-genre-targets.cjs",
