--- a/vercel.json
+++ b/vercel.json
@@ -12,6 +12,15 @@
   ],
   "routes": [
     { 
+      "src": "/prelaunch.html", 
+      "dest": "/public/prelaunch.html",
+      "headers": {
+        "Cache-Control": "no-cache, no-store, must-revalidate, max-age=0",
+        "Pragma": "no-cache",
+        "Expires": "0"
+      }
+    },
+    { 
       "src": "/debug-fase1.js", 
       "dest": "/debug-fase1.js",
       "headers": {
